tree-sitter-unobin/test/corpus/type-expressions.txt
==================
Type expressions
==================

factory: {
  inputs: {
    name: { type: string }
    ports: { type: list(integer) }
    labels: { type: map(string) }
    pair: { type: tuple(string, number) }
    config: { type: optional(open(object({ retry: integer }))) }
    lib: { type: library-config('example.com/aws') }
    nested: {
      type: object({
        name: string
        settings: { type: object({ enabled: boolean }) }
      })
    }
  }
}

---

(source_file
  (field
    (value_field
      (field_key
        (identifier))
      (expression
        (primary_expression
          (object
            (field
              (value_field
                (field_key
                  (identifier))
                (expression
                  (primary_expression
                    (object
                      (field
                        (value_field
                          (field_key
                            (identifier))
                          (expression
                            (primary_expression
                              (object
                                (field
                                  (type_value_field
                                    (field_key)
                                    (type_expression
                                      (atomic_type)))))))))
                      (field
                        (value_field
                          (field_key
                            (identifier))
                          (expression
                            (primary_expression
                              (object
                                (field
                                  (type_value_field
                                    (field_key)
                                    (type_expression
                                      (list_type
                                        (type_expression
                                          (atomic_type)))))))))))
                      (field
                        (value_field
                          (field_key
                            (identifier))
                          (expression
                            (primary_expression
                              (object
                                (field
                                  (type_value_field
                                    (field_key)
                                    (type_expression
                                      (map_type
                                        (type_expression
                                          (atomic_type)))))))))))
                      (field
                        (value_field
                          (field_key
                            (identifier))
                          (expression
                            (primary_expression
                              (object
                                (field
                                  (type_value_field
                                    (field_key)
                                    (type_expression
                                      (tuple_type
                                        (type_expression
                                          (atomic_type))
                                        (type_expression
                                          (atomic_type)))))))))))
                      (field
                        (value_field
                          (field_key
                            (identifier))
                          (expression
                            (primary_expression
                              (object
                                (field
                                  (type_value_field
                                    (field_key)
                                    (type_expression
                                      (optional_type
                                        (type_expression
                                          (open_type
                                            (type_expression
                                              (object_type
                                                (type_field
                                                  (field_key
                                                    (identifier))
                                                  (type_expression
                                                    (atomic_type))))))))))))))))
                      (field
                        (value_field
                          (field_key
                            (identifier))
                          (expression
                            (primary_expression
                              (object
                                (field
                                  (type_value_field
                                    (field_key)
                                    (type_expression
                                      (library_config_type
                                        (string
                                          (single_quoted_string)))))))))))
                      (field
                        (value_field
                          (field_key
                            (identifier))
                          (expression
                            (primary_expression
                              (object
                                (field
                                  (type_value_field
                                    (field_key)
                                    (type_expression
                                      (object_type
                                        (type_field
                                          (field_key
                                            (identifier))
                                          (type_expression
                                            (atomic_type)))
                                        (type_field
                                          (field_key
                                            (identifier))
                                          (type_input_decl
                                            (field
                                              (type_value_field
                                                (field_key)
                                                (type_expression
                                                  (object_type
                                                    (type_field
                                                      (field_key
                                                        (identifier))
                                                      (type_expression
                                                        (atomic_type)))))))))))))))))))))))))))))

================================
Trailing comma type constructors
================================

factory: {
  inputs: {
    replicas: {
      type: list(
        object(
          {
            name: string,
            labels: map(string,),
            settings: optional(open(object({ enabled: boolean, }),),),
          },
        ),
      )
    }
  }
}

---

(source_file
  (field
    (value_field
      (field_key
        (identifier))
      (expression
        (primary_expression
          (object
            (field
              (value_field
                (field_key
                  (identifier))
                (expression
                  (primary_expression
                    (object
                      (field
                        (value_field
                          (field_key
                            (identifier))
                          (expression
                            (primary_expression
                              (object
                                (field
                                  (type_value_field
                                    (field_key)
                                    (type_expression
                                      (list_type
                                        (type_expression
                                          (object_type
                                            (type_field
                                              (field_key
                                                (identifier))
                                              (type_expression
                                                (atomic_type)))
                                            (type_field
                                              (field_key
                                                (identifier))
                                              (type_expression
                                                (map_type
                                                  (type_expression
                                                    (atomic_type)))))
                                            (type_field
                                              (field_key
                                                (identifier))
                                              (type_expression
                                                (optional_type
                                                  (type_expression
                                                    (open_type
                                                      (type_expression
                                                        (object_type
                                                          (type_field
                                                            (field_key
                                                              (identifier))
                                                            (type_expression
                                                              (atomic_type))))))))))))))))))))))))))))))))
